--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.11.0",
     "parcel": "^2.11.0"
+  },
+  "dependencies": {
+    "parsel": "^0.3.0"
   }
 }
