--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "active-box project",
   "scripts": {
-    "start": "npx parcel src/index.html",
-    "build": "npx parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "start": "parcel src/index.html --no-cache"
   },
   "repository": {
     "type": "git",
